--- a/downloads.html
+++ b/downloads.html
@@ -14,47 +14,73 @@
 	<h2>Here you will find the xᴛʀ ʀᴏᴍ updates and their respective changelog</h2>
 	<br><br><br><br>
 <article>
-  <div class="article">
-    <strong>v2.3:</strong><br>Comming soon :)<br><br>
+<div class="article">
+    <strong>v2.3:</strong><br>
+	Fix update and maybe the final version<br><br>
+	[+] Added more apps for install<br>
+	[+] Added Magisk updated (v23)<br>
+	[+] Added codecs<br>
+	[+] Added Google's DNS<br>
+	[+] Added Net TCP Buffers<br>
+	[+] Added new sound_fx lib (for "UHQ Upscaler")<br>
+	[*] New bootanimation. This will be the official of xtr rom<br>
+	[*] Improved read/write speed<br>
+	[x] Fixed Oneui sounds<br>
+	[x] Fixed erros with Youtube<br>
+	[x] Fixed lag on home screen & some apps<br>
+	[+] More free RAM~<br>
+	[-] Removed OneUI (not working) :')<br>
+	[-] Removed codecs that require too much performance<br>
+	[-] Remoded some tweaks are not working on build.prop<br>
+	[-] Removed "Highperfomance Mode" because it had no effect on the performance<br>
+	- Now the laucher keeps in the memory to remove the CPU load after exiting an app (if is possible)<br>
+	- Now you can install this rom without having to delete your personal or application data<br>
+	- And Many More<br>
+	- New aroma-installer theme and menu(s)<br><br>
+
+	Bugs:<br>
+	FaceLock is not working<br>
+	Some apps are not updated<br><br><br><br>
 	<strong>v2.2:</strong><br>
-	- Added AOD (always display)<br>
-	- Added a kernel menu<br>
-	- Added Ultra Data Saving mode<br>
-	- Added Sreen REC<br>
-	- Added S Power Planning<br>
-	- Added S Clean<br>
-	- Added lock screen app, useful for those who have broken on/off button<br>
-	- init.d tweaks<br>
-	- Game tools updated<br>
-	- Integrated zram (automatic)<br>
-	- Fast calling (When receiving a call it will appear faster)<br>
-	- Fast boot<br>
-	- Fast shutdown<br>
-	- Fixed photo overload in thubanils folder<br>
-	- Fixed "KERNEL IS NOT SEANDROID ENFOACING"<br>
-	- Full debloated and deodexed<br>
-	- Full OneUI sounds<br>
-	- New bootanimation<br>
-	- Smooth scroll added<br>
-	- Tweaks on buld.prop and camera-feature-v7<br>
-	- DPI changed to 236<br>
-	- OneUI ported Stock Gallery<br>
-	- OneUI ported Stock Notes<br>
-	- OneUI themes (Black & White)<br>
-	- Multi User Mode added<br>
-	- And Many More<br><br>	
+	Built from scratch<br><br>
+	[+] Added Ultra Data Saving mode<br>
+	[+] Added Sreen REC<br>
+	[+] Added S Power Planning<br>
+	[+] Added S Clean<br>
+	[+] Added lock screen app, useful for those who have broken on/off button<br>
+	[+] init.d tweaks<br>
+	[*] Game tools updated<br>
+	[+] Integrated zram<br>
+	[+] Fast calling (When receiving a call it will appear faster)<br>
+	[+] Fast boot<br>
+	[+] Fast shutdown<br>
+	[x] Fixed photo overload in thubanils folder<br>
+	[x] Fixed "<#f00>KERNEL IS NOT SEANDROID ENFOACING</#>"<br>
+	[*] Full debloated and deodexed<br>
+	[*] Full OneUI sounds<br>
+	[+] New bootanimation<br>
+	[+] Smooth scroll added<br>
+	[+] Tweaks on buld.prop and camera-feature-v7<br>
+	[*] DPI changed to 236<br>
+	[+] Black/White theme<br>
+	[+] OneUI ported Stock Gallery<br>
+	[+] OneUI ported Stock Notes<br>
+	[+] OneUI themes (Black & White)<br>
+	[+] Multi User Mode added<br>
+	- And Many More<br><br><br><br>
 	<strong>v1.2:</strong><br>
-	- Changes made to the build.prop<br>
-	- Applications: updated<br>
-	- TWRP (PBRP-3.0.0-20200906-1816): updated<br>
-	- camera-feature-v7: updated<br>
-	- white_bootsamsung, white_bootsamsungloop & shutdown_WH: updated -> black<br>
-	- Kernel: improved<br>
-	- SmartpackKernelManager: added<br>
-	- boot.img: updated<br>
-	- AOD (Always On Display): added<br>
-	- SMusic: added<br>
-	- Among other things<br><br>
+	This is an improved version of Rustrom v3<br><br>
+	[*] Changes made to the build.prop<br>
+	[*] Applications: updated<br>
+	[+] TWRP (PBRP-3.0.0-20200906-1816): updated<br>
+	[+] camera-feature-v7: updated<br>
+	[+] white_bootsamsung, white_bootsamsungloop & shutdown_WH: updated -> black<br>
+	[x] Kernel: improved<br>
+	[+] SmartpackKernelManager: added<br>
+	[*] boot.img: updated<br>
+	[+] AOD (Always On Display): added<br>
+	[+] SMusic: added<br>
+	- Among other things<br>
   </div>
 </article>
 
