--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 	<title>XTR ROM</title>
 </head>
 <body>
+	<div class="clock-container">
+		<span id="clock"></span>
+	</div>
+	  <script>
+		function updateClock() {
+		  var now = new Date();
+		  var hours = now.getHours().toString().padStart(2, '0');
+		  var minutes = now.getMinutes().toString().padStart(2, '0'); 
+		  var seconds = now.getSeconds().toString().padStart(2, '0');
+		  document.getElementById("clock").innerHTML = hours + ":" + minutes + ":" + seconds;
+		}
+		setInterval(updateClock, 1000);
+	  </script>
 	<div id="vanta-container"></div>
 	<div class="body-container">
 		<h1>XTR ROM</h1>
