--- a/downloads.html
+++ b/downloads.html
@@ -100,16 +100,16 @@
 <div class="download-info">
     <div style="display:block;">
         <div class="download-box">
-			<h3>XTR ROM OneUI v2.3 (Comming soon)</h3>
+			<h3>XTR ROM OneUI v2.3</h3>
 			<div class="download-info">
-				<p>&emsp;[ROM][7.1.1]XTR ROM OneUI For Galaxy J2 Pro 2018 (J250xx).zip</p>
-				<p><strong>&emsp;File size:</strong> 1140 MB</p>
-				<p><strong>&emsp;Release date:</strong> ????? ?, 2023</p>
+				<p>&emsp;[ROM][7.1.1]XTR ROM v2.3 For Galaxy J2 Pro 2018 (j2y18lte).zip</p>
+				<p><strong>&emsp;File size:</strong> 1361 MB</p>
+				<p><strong>&emsp;Release date:</strong> Sep, 28 2023</p>
 			</div>
 			<div class="download-buttons">
-				<a href="#" class="button button-mega" target="_blank">MEGA</a>
-				<a href="#" class="button button-mediare" target="_blank">MediaFire</a>
-				<a href="#" class="button button-gdrive" target="_blank">Google Drive</a>
+				<a href="https://mega.nz/file/n2RAkIAQ#fLfR_rW2E2nQqbOcucUTDFcG6YsJi-qxzePHFL79plk" class="button button-mega" target="_blank">MEGA</a>
+				<a href="https://www.mediafire.com/file/37nwya4oiq86xiu/%255BROM%255D%255B7.1.1%255D_XTR_ROM_v2.3_for_Galaxy_J2_Pro_2018_%2528j2y18lte%2529.zip/file" class="button button-mediare" target="_blank">MediaFire</a>
+				<a href="https://drive.google.com/file/d/1Dp_rofzKy3xbz72rhQvUuqNDTdyx-Rym/view?usp=drive_link" class="button button-gdrive" target="_blank">Google Drive</a>
             </div>
         </div>
     </div>
